CRS-1365 Include release dates, including overrides in the CalculableSentenceEnvelope